syntax = "proto3";

package orchestrator;

service OrchestratorService {
    rpc signUp (SignUpRequest) returns (SignUpResponse);
}

message SignUpRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message SignUpResponse {
    string accessToken = 1;
    string refreshToken = 2;
}
