syntax = "proto3";

package users;

service UsersService {
  rpc createUser (CreateUserRequest) returns (CreateUserResponse);
//   rpc findUser (FindUserRequest) returns (FindUserResponse);
//   rpc updateUser (UpdateUserRequest) returns (UpdateUserResponse);
//   rpc deleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string clientId = 3;
}

message CreateUserResponse {
  string id = 1;
}
